--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,7 +1,9 @@
 <div class="recipe recipe-list-item">
   <div class="recipe-cover">
     <a href="{% url 'recipes:recipe' recipe.id %}">
-      <img src={{recipe.cover.url}} alt="Temporário">
+      {% if recipe.cover %}
+        <img src={{recipe.cover.url}} alt="Foto da receita">
+      {% endif %}
     </a>
   </div>
   <div class="recipe-title-container">
@@ -13,14 +15,18 @@
   <div class="recipe-author">
     <span class="recipe-author-item">
       <i class="fas fa-user"></i>
-      {{recipe.author.first_name}} {{recipe.author.last_name}} 
+        {% if recipe.author.first_name %}
+          {{recipe.author.first_name}} {{recipe.author.last_name}} 
+        {% else %}
+          {{recipe.author.username}}
+        {% endif %}
     </span>
     <span class="recipe-author-item">
       <i class="fas fa-calendar-alt"></i>
       {{recipe.created_at|date:"d/m/Y"}} às {{recipe.created_at|date:"H:i"}}
     </span>
     <span class="recipe-author-item">
-      <a href="/recipes/category/cafe-da-manha/">
+      <a href="{% url 'recipes:category' recipe.category.id %}">
         <i class="fas fa-layer-group"></i>
         <span>{{recipe.category.name}}</span>
       </a>
@@ -58,6 +64,9 @@
 
   {% if is_detail_page is True %}
     <div class="preparation-steps">
+      {% if preparation_steps_is_html %}
+        {{recipe.preparation_steps|safe}}
+      {% endif %}
       {{recipe.preparation_steps|linebreaksbr}}
     </div>
   {% endif %}
