--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -68,12 +68,13 @@
   {% endif %}
 
   {% if is_detail_page is True %}
+  
     <div class="preparation-steps">
-      {% if preparation_steps_is_html %}
-        {{recipe.preparation_steps|safe}}
+      {% if recipe.preparation_steps_is_html is True %}
+        {{ recipe.preparation_steps|safe}}
+      {% else %}
+        {{ recipe.preparation_steps|linebreaksbr}}
       {% endif %}
-      {{recipe.preparation_steps|linebreaksbr}}
     </div>
   {% endif %}
-
 </div>
