--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -273,3 +273,22 @@ h6 {
 .main-footer a:hover {
   filter: brightness(0.8);
 }
+
+.preparation-steps h1 {}
+.preparation-steps h2 {}
+.preparation-steps h3 {}
+.preparation-steps h4 {}
+.preparation-steps h5 {}
+.preparation-steps h6 {}
+.preparation-steps p {}
+
+.preparation-steps ol,
+.preparation-steps ul {
+  margin: 2rem;
+  padding: 0 2rem;
+}
+
+
+.preparation-steps pre {
+  margin: 1rem 0;
+}
