feat: add not found page and styled min height

--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -7,6 +7,8 @@
 
     {% for recipe in recipes %}
         {% include 'recipes/partials/recipe.html' %}
+        {%empty%}
+        <h1 class="text-center m-y">Não há receitas publicadas.</h1>
     {% endfor %}
     
 </div>
