--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -140,6 +140,10 @@ h6 {
 .main-content {
   padding-top: 0;
 }
+.main-content-container {
+  min-height: calc(100vh - 310px);
+  height: 100%;
+}
 
 .main-content-list {
   display: grid;
@@ -291,4 +295,18 @@ h6 {
 
 .preparation-steps pre {
   margin: 1rem 0;
+}
+
+/* Generic */
+.text-center {
+  text-align: center !important;
+}
+
+.m-x {
+  margin: 0 var(--spacing-gutter-medium);
+}
+
+.m-y {
+  margin: var(--spacing-gutter-medium) 0;
+  
 }
