--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,8 +1,10 @@
+{% load static %}
+
 <div class="recipe recipe-list-item">
   <div class="recipe-cover">
     <a href="{% url 'recipes:recipe' recipe.id %}">
       {% if recipe.cover %}
-        <img src={{recipe.cover.url}} alt="Foto da receita">
+        <img src="{{recipe.cover.url}}" onerror="this.onerror=null;this.src='{% static 'image/receita.jpg' %}'" alt="Foto da receita">        
       {% endif %}
     </a>
   </div>
@@ -27,7 +29,6 @@
     </span>
 
     {% if recipe.category is not None %}
-    
       <span class="recipe-author-item">
         <a href="{% url 'recipes:category' recipe.category.id %}">
           <i class="fas fa-layer-group"></i>
